Added auto discovery

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,11 @@
         "psr-4": {
             "Digitalcrm\\Contact\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Digitalcrm\\Contact\\ContactServiceProvider"
+            ]
     }
 }
